// Stats Service API
syntax = "proto3";
option go_package = "givc/modules/api/stats";

package stats;

// Empty stats request message
message StatsRequest {
}

// Statistics for a singular process
message ProcessStat {
    string Name = 1;
    float User = 2;
    float Sys = 3;
    uint64 ResSetSize = 4;
}

// Cummulative process stats
message ProcessStats {
    repeated ProcessStat CpuProcesses = 1;
    repeated ProcessStat MemProcesses = 2;
    uint64 Total = 3;
    uint64 Running = 4;
    uint64 UserCycles = 5;
    uint64 SysCycles = 6;
    uint64 TotalCycles = 7;
}

// Load stats over different time frames
message LoadStats {
    float Load1Min = 1;
    float Load5Min = 2;
    float Load15Min = 3;
}

// Memory stats info
message MemoryStats {
    uint64 Total = 1;
    uint64 Free = 2;
    uint64 Available = 3;
    uint64 Cached = 4;
}

// Combined stats response message
message StatsResponse {
    MemoryStats Memory = 1;
    LoadStats Load = 2;
    ProcessStats Process = 3;
}

service StatsService {
    // Get process statistics
    rpc GetStats(StatsRequest) returns (StatsResponse) {}
}
